# FXdiv

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  configure.py  confu.yaml
cmake/: BuildGTest.cmake  DownloadGoogleBenchmark.cmake  DownloadGoogleTest.cmake  FXdivConfig.cmake.in
include/: fxdiv.h
test/: Quotient.cc
